--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
+    "express-validator": "^7.2.1",
     "fs": "^0.0.1-security",
     "mongoose": "^8.15.1",
     "nodemon": "^3.1.10",
+    "openai": "^5.16.0",
     "path": "^0.12.7",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
