--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.10",
     "openai": "^5.16.0",
     "path": "^0.12.7",
+    "twilio": "^5.8.2",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   }
